--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -9,13 +9,13 @@
               {http, [ {"{{web_ip}}", {{web_port}} } ]},
 
               %% Default ring size
-              %{ring_creation_size, 64},
+              {ring_creation_size, 16},
 
               %% riak_handoff_port is the TCP port that Riak uses for
               %% intra-cluster data handoff.
               {handoff_port, {{handoff_port}} }
              ]},
-              
+
  %% SASL config
  {sasl, [
          {sasl_error_logger, {file, "log/sasl-error.log"}},
