Use ETS by default.

--- a/rel/vars.config
+++ b/rel/vars.config
@@ -5,7 +5,7 @@
 {web_ip,                "127.0.0.1"}.
 {web_port,              "8098"}.
 {handoff_port,          "8099"}.
-{storage_backend,       "leveldb"}.
+{storage_backend,       "ets"}.
 {anti_entropy,          {on, [debug]}}.
 
 %%
