--- a/rebar.config
+++ b/rebar.config
@@ -1,12 +1,11 @@
 {sub_dirs, ["rel"]}.
 
 {deps, [
-    {lager, "2.0.3" , {git, "git://github.com/basho/lager", {tag, "2.0.3"}}},
     {rkvs, ".*", {git, "git://github.com/ricardobcl/rkvs.git", "master"}},
-    {riak_core, "2.0.1", {git, "git://github.com/basho/riak_core", {tag, "2.0.1"}}},
-    {reloader, ".*", {git, "git://github.com/oinksoft/reloader.git", "master"}}
+    {riak_core, ".*", {git, "git://github.com/basho/riak_core", {tag, "2.1.2"}}},
+    {ranch, ".*", {git, "git://github.com/ninenines/ranch", "master"}},
+    {msgpack, ".*", {git, "git://github.com/msgpack/msgpack-erlang.git", "master"}}
 ]}.
 
 {erl_opts, [debug_info, warnings_as_errors, {parse_transform, lager_transform}]}.
 
-{cover_enabled, true}.
