Add protocol server API to communicate with external services through msgpack protocol.

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -3,10 +3,7 @@
  {riak_core, [
               %% Default location of ringstate
               {ring_state_dir, "{{ring_state_dir}}"},
-
-              %% http is a list of IP addresses and TCP ports that the Riak
-              %% HTTP interface will bind.
-              {http, [ {"{{web_ip}}", {{web_port}} } ]},
+              {platform_data_dir, "{{platform_data_dir}}"},
 
               %% Default ring size
               {ring_creation_size, 16},
@@ -27,11 +24,15 @@
 
  %% BasicDB config
 {basic_db, [
-            %% Used LevelDB as the default backend
-            {storage_backend, leveldb},
+            %% Used ETS as the default backend
+            {storage_backend,       "ets"},
 
             %% Enable active anti-entropy by default
             %% With debugging
-            {anti_entropy, {on, [debug]}}
+            {anti_entropy, {on, [debug]}},
+
+            %% protocol_port is the TCP port that BasicDB uses for
+            %% external API.
+            {protocol_port, {{protocol_port}} }
         ]}
 ].
