--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -1,5 +1,5 @@
 {sys, [
-       {lib_dirs, ["../apps/", "../deps/"]},
+       {lib_dirs, ["../deps/"]},
        {rel, "basic_db", "1",
         [
          kernel,
@@ -18,7 +18,7 @@
                            "^erts.*/bin/(dialyzer|typer)"]},
        {excl_archive_filters, [".*"]},
        {app, sasl, [{incl_cond, include}]},
-       {app, basic_db, [{incl_cond, include}]}
+       {app, basic_db, [{incl_cond, include}, {lib_dir, ".."}]}
       ]}.
 
 {target_dir, "basic_db"}.
@@ -33,5 +33,9 @@
            {template, "files/app.config", "etc/app.config"},
            {template, "files/vm.args", "etc/vm.args"},
            {template, "files/basic_db", "bin/basic_db"},
-           {template, "files/basic_db-admin", "bin/basic_db-admin"}
+           {template, "files/basic_db-admin", "bin/basic_db-admin"},
+           {template, "../deps/cuttlefish/priv/erlang_vm.schema", "lib/11-erlang_vm.schema"},
+           {template, "../deps/riak_core/priv/riak_core.schema", "lib/12-riak_core.schema"},
+           {template, "../deps/riak_sysmon/priv/riak_sysmon.schema", "lib/15-riak_sysmon.schema"},
+           {template, "../deps/eleveldb/priv/eleveldb.schema", "lib/21-leveldb.schema"}
            ]}.
