--- a/rel/vars.config
+++ b/rel/vars.config
@@ -2,10 +2,11 @@
 %% etc/app.config
 %%
 {ring_state_dir,        "data/ring"}.
+{platform_data_dir,     "./data"}.
 {web_ip,                "127.0.0.1"}.
 {web_port,              "8098"}.
 {handoff_port,          "8099"}.
-{storage_backend,       "ets"}.
+{protocol_port,         "8097"}.
 {anti_entropy,          {on, [debug]}}.
 
 %%
