Corrected some syntax bugs.

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -29,7 +29,7 @@
 
             %% Enable active anti-entropy by default
             %% With debugging
-            {anti_entropy, {on, [debug]}},
+            {anti_entropy, {on, []}},
 
             %% protocol_port is the TCP port that BasicDB uses for
             %% external API.
