--- a/rel/vars/dev2_vars.config
+++ b/rel/vars/dev2_vars.config
@@ -8,7 +8,9 @@
 {web_ip,            "127.0.0.1"}.
 {web_port,          10028}.
 {handoff_port,      10029}.
-{anti_entropy,      {on, [debug]}}.
+{protocol_port,     10027}.
+{storage_backend,   "ets"}.
+{anti_entropy,      {on, []}}.
 
 %%
 %% etc/vm.args
