--- a/rel/vars.config
+++ b/rel/vars.config
@@ -7,7 +7,7 @@
 {web_port,              "8098"}.
 {handoff_port,          "8099"}.
 {protocol_port,         "8097"}.
-{anti_entropy,          {on, [debug]}}.
+{anti_entropy,          {on, []}}.
 
 %%
 %% etc/vm.args
