--- a/rel/vars/dev4_vars.config
+++ b/rel/vars/dev4_vars.config
@@ -8,7 +8,9 @@
 {web_ip,            "127.0.0.1"}.
 {web_port,          10048}.
 {handoff_port,      10049}.
-{anti_entropy,      {on, [debug]}}.
+{protocol_port,     10047}.
+{storage_backend,   "ets"}.
+{anti_entropy,      {on, []}}.
 
 %%
 %% etc/vm.args
