--- a/config/files/app.config
+++ b/config/files/app.config
@@ -18,14 +18,15 @@
          {sasl_error_logger, {file, "log/sasl-error.log"}},
          {errlog_type, error},
          {error_logger_mf_dir, "log/sasl"},      % Log directory
-         {error_logger_mf_maxbytes, 10485760},   % 10 MB max file size
-         {error_logger_mf_maxfiles, 5}           % 5 files max
+         {error_logger_mf_maxbytes, 1048576},    % 1 MB max file size
+         {error_logger_mf_maxfiles, 1}           % 1 files max
          ]},
 
  %% BasicDB config
 {basic_db, [
             %% Used ETS as the default backend
-            {storage_backend,       "ets"},
+            %% {storage_backend, ets | leveldb | bitcask}
+            {storage_backend, bitcask},
 
             %% Enable active anti-entropy by default
             %% With debugging
@@ -33,6 +34,11 @@
 
             %% protocol_port is the TCP port that BasicDB uses for
             %% external API.
-            {protocol_port, {{protocol_port}} }
+            {protocol_port, {{protocol_port}} },
+
+            %% Bitcask config
+            {bitcask_io_sync, none},
+            {bitcask_io_mode, nif},
+            {bitcask_merge_window, never}
         ]}
 ].
