--- a/config/vars/dev3_vars.config
+++ b/config/vars/dev3_vars.config
@@ -5,15 +5,15 @@
 %% etc/app.config
 %%
 {ring_state_dir,    "data/ring"}.
+{platform_data_dir, "./data"}.
 {web_ip,            "127.0.0.1"}.
-{web_port,          10018}.
-{handoff_port,      10019}.
-{protocol_port,     10017}.
-{storage_backend,   "ets"}.
+{web_port,          10038}.
+{handoff_port,      10039}.
+{protocol_port,     10037}.
 {anti_entropy,      {on, []}}.
 
 %%
 %% etc/vm.args
 %%
-{node,         "basic_db1@127.0.0.1"}.
-{cookie, "basic_db"}.
+{node,          "basic_db3@127.0.0.1"}.
+{cookie,        "basic_db"}.
