--- a/config/vars/dev4_vars.config
+++ b/config/vars/dev4_vars.config
@@ -5,15 +5,15 @@
 %% etc/app.config
 %%
 {ring_state_dir,    "data/ring"}.
+{platform_data_dir, "./data"}.
 {web_ip,            "127.0.0.1"}.
-{web_port,          @WEBPORT@}.
-{handoff_port,      @HANDOFFPORT@}.
-{protocol_port,     @PROTOCOLPORT@}.
-{storage_backend,   "ets"}.
+{web_port,          10048}.
+{handoff_port,      10049}.
+{protocol_port,     10047}.
 {anti_entropy,      {on, []}}.
 
 %%
 %% etc/vm.args
 %%
-{node,         "@NODE@"}.
-{cookie, "basic_db"}.
+{node,          "basic_db4@127.0.0.1"}.
+{cookie,        "basic_db"}.
