--- a/config/files/app.config
+++ b/config/files/app.config
@@ -22,6 +22,11 @@
          {error_logger_mf_maxfiles, 1}           % 1 files max
          ]},
 
+{lager, [
+    {colored, true}
+]},
+
+
  %% BasicDB config
 {basic_db, [
             %% Used ETS as the default backend
